--- a/apk/res/values-ky/strings.xml
+++ b/apk/res/values-ky/strings.xml
@@ -455,7 +455,7 @@
     <string name="export_cancel_button" msgid="1952360582645412410">"Жокко чыгаруу"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"Жокко чыгаруу"</string>
     <string name="import_next_button" msgid="5706322508691854289">"Кийинки"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"Төмөнкүдө өткөрүп алуу"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"Каяктан өткөрөсүз:"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"Маалыматтарды импорттоо үчүн булуттагы сактагычтан колдонмо тандаңыз"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"Аккаунтту тандоо үчүн таптап коюңуз"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"Аккаунт тандаңыз"</string>
@@ -912,7 +912,7 @@
     <string name="range_off" msgid="8178520557618184215">"Өчүк"</string>
     <string name="auto_delete_rationale" msgid="5255442126521464878">"Бул параметрди өзгөртсөңүз, жаңы параметрлерди чагылдыруу үчүн Health Connect учурдагы нерселерди өчүрөт"</string>
     <string name="confirming_question_x_months" msgid="8204363800605282103">"{count,plural, =1{Колдонмодогу нерселер # айдан кийин автоматтык түрдө өчсүнбү?}other{Колдонмодогу нерселер # айдан кийин автоматтык түрдө өчсүнбү?}}"</string>
-    <string name="confirming_message_x_months" msgid="986840333220382321">"{count,plural, =1{Муну менен Health Connect\'тен # айдан ашуун сакталган нерселер да өчүрүлөт.\n\nЭгер байланышкан колдонмолоруңуздан нерселерди толугу менен өчүргүңүз келсе, маалыматыңыз сакталышы мүмкүн болгон ар бир колдонмону текшериңиз.}other{Муну менен Health Connect\'тен # айдан ашуун сакталган нерселер да өчүрүлөт.\n\nЭгер байланышкан колдонмолоруңуздан нерселерди толугу менен өчүргүңүз келсе, маалыматыңыз сакталышы мүмкүн болгон ар бир колдонмону текшериңиз.}}"</string>
+    <string name="confirming_message_x_months" msgid="986840333220382321">"{count,plural, =1{Муну менен Health Connect\'тен # айдан ашуун сакталган нерселер да өчүрүлөт.\n\nЭгер байланышкан колдонмолоруңуздагы нерселерди толугу менен өчүргүңүз келсе, маалыматыңыз сакталышы мүмкүн болгон ар бир колдонмону текшериңиз.}other{Муну менен Health Connect\'тен # айдан ашуун сакталган нерселер да өчүрүлөт.\n\nЭгер байланышкан колдонмолоруңуздагы нерселерди толугу менен өчүргүңүз келсе, маалыматыңыз сакталышы мүмкүн болгон ар бир колдонмону текшериңиз.}}"</string>
     <string name="set_auto_delete_button" msgid="268450418318199197">"Автоматтык өчүрүүнү тууралоо"</string>
     <string name="deletion_started_title" msgid="1177766097121885025">"Учурдагы нерселер өчүрүлөт"</string>
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{Health Connect # айдан ашуун сакталган бардык нерселерди өчүрөт. Бул өзгөрүү кызматка байланган колдонмолоруңузда бир күндүн ичинде күчүнө кирет.}other{Health Connect # айдан ашуун сакталган бардык нерселерди өчүрөт. Бул өзгөрүү кызматка байланган колдонмолоруңузда бир күндүн ичинде күчүнө кирет.}}"</string>
