--- a/apk/res/values-ru/strings.xml
+++ b/apk/res/values-ru/strings.xml
@@ -43,7 +43,7 @@
     <string name="set_units_title" msgid="2657822539603758029">"Настроить единицы измерения"</string>
     <string name="manage_data_preferences_category_title" msgid="1183110821140344472">"Настройки"</string>
     <string name="manage_data_category_title" msgid="6328886061582616519">"Управление данными"</string>
-    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Импорт и экспорт данных"</string>
+    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Экспорт и импорт данных"</string>
     <string name="recent_access_header" msgid="7623497371790225888">"Доступ за последнее время"</string>
     <string name="no_recent_access" msgid="4724297929902441784">"В последнее время приложения не получали доступ к сервису \"Здоровье и спорт\""</string>
     <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"Вся информация о доступе за последнее время"</string>
@@ -455,7 +455,7 @@
     <string name="export_cancel_button" msgid="1952360582645412410">"Отмена"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"Отмена"</string>
     <string name="import_next_button" msgid="5706322508691854289">"Далее"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"Откуда импортировать:"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"Источник импорта"</string>
     <string name="import_invalid_storage" msgid="341798262315495399">"Выберите облачное хранилище для импорта данных."</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"Нажмите, чтобы выбрать аккаунт"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"Выберите аккаунт"</string>
@@ -466,16 +466,16 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Перейти в Google Play"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Начало работы с сервисом \"Здоровье и спорт\""</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Приложение \"Здоровье и спорт\" надежно хранит ваши данные о физической активности и здоровье, а также синхронизирует работу разных приложений на устройстве."</string>
-    <string name="share_data" msgid="3481932156368883946">"Делитесь данными с приложениями"</string>
+    <string name="share_data" msgid="3481932156368883946">"Делиться данными с приложениями"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Выбирайте, какую информацию каждое приложение сможет читать и сохранять в сервисе \"Здоровье и спорт\"."</string>
-    <string name="manage_your_settings" msgid="7391184508015127137">"Управляйте настройками и конфиденциальностью"</string>
+    <string name="manage_your_settings" msgid="7391184508015127137">"Управлять настройками и конфиденциальностью"</string>
     <string name="manage_your_settings_description" msgid="557943168930365334">"Настраивайте разрешения для приложений и управляйте своими данными."</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Назад"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Начать"</string>
     <string name="delete_button_content_description" msgid="9125115327455379618">"Удалить данные"</string>
     <string name="enter_deletion_button_content_description" msgid="416336747251264118">"Перейти к удалению"</string>
     <string name="exit_deletion_button_content_description" msgid="6579227028841619158">"Отменить удаление"</string>
-    <string name="time_range_title" msgid="5777596779865648336">"Выберите, какие данные удалить из приложения"</string>
+    <string name="time_range_title" msgid="5777596779865648336">"Выберите, какие данные удалить из сервиса"</string>
     <string name="time_range_next_button" msgid="5849096934896557888">"Далее"</string>
     <string name="time_range_message_all" msgid="7280888587242744729">"Все данные, добавленные в приложение \"Здоровье и спорт\" за выбранный период времени, будут навсегда удалены."</string>
     <string name="time_range_message_data_type" msgid="1896125004829258195">"Данные \"<xliff:g id="DATA_TYPE">%s</xliff:g>\", добавленные в приложение \"Здоровье и спорт\" за выбранный период времени, будут навсегда удалены."</string>
@@ -904,21 +904,21 @@
     <string name="playstore_app_title" msgid="4138464328693481809">"Google Play"</string>
     <string name="auto_delete_button" msgid="8536451792268513619">"Автоматическое удаление"</string>
     <string name="auto_delete_title" msgid="8761742828224207826">"Автоматическое удаление"</string>
-    <string name="auto_delete_header" msgid="4258649705159293715">"Укажите период, по истечении которого данные будут автоматически удаляться из приложения \"Здоровье и спорт\""</string>
-    <string name="auto_delete_learn_more" msgid="7416469042791307994">"Подробнее об автоматическом удалении…"</string>
+    <string name="auto_delete_header" msgid="4258649705159293715">"Укажите период, по истечении которого данные будут удаляться из сервиса \"Здоровье и спорт\"."</string>
+    <string name="auto_delete_learn_more" msgid="7416469042791307994">"Подробнее об автоматическом удалении"</string>
     <string name="auto_delete_section" msgid="7732381000331475082">"Автоматически удалять данные"</string>
     <string name="range_after_x_months" msgid="3340127072680117121">"{count,plural, =1{Через # месяц}one{Через # месяц}few{Через # месяца}many{Через # месяцев}other{Через # месяца}}"</string>
     <string name="range_never" msgid="4429478261788361233">"Никогда"</string>
     <string name="range_off" msgid="8178520557618184215">"Выключено"</string>
     <string name="auto_delete_rationale" msgid="5255442126521464878">"При изменении периода хранения существующие данные будут удалены в соответствии с новыми настройками."</string>
     <string name="confirming_question_x_months" msgid="8204363800605282103">"{count,plural, =1{Автоматически удалять данные через # месяц?}one{Автоматически удалять данные через # месяц?}few{Автоматически удалять данные через # месяца?}many{Автоматически удалять данные через # месяцев?}other{Автоматически удалять данные через # месяца?}}"</string>
-    <string name="confirming_message_x_months" msgid="986840333220382321">"{count,plural, =1{Из приложения \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяца.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}one{Из приложения \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяца.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}few{Из приложения \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяцев.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}many{Из приложения \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяцев.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}other{Из приложения \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяца.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}}"</string>
+    <string name="confirming_message_x_months" msgid="986840333220382321">"{count,plural, =1{Из сервиса \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяца.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}one{Из сервиса \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяца.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}few{Из сервиса \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяцев.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}many{Из сервиса \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяцев.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}other{Из сервиса \"Здоровье и спорт\" также будут удалены сведения, хранящиеся более # месяца.\n\nЧтобы полностью удалить данные из связанных приложений, проверьте каждое, где может сохраняться ваша информация.}}"</string>
     <string name="set_auto_delete_button" msgid="268450418318199197">"Настроить автоматическое удаление"</string>
     <string name="deletion_started_title" msgid="1177766097121885025">"Существующие данные будут удалены"</string>
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{Приложение \"Здоровье и спорт\" удалит все данные, хранящиеся более # месяца. Изменения вступят в силу в связанных приложениях в течение одного дня.}one{Приложение \"Здоровье и спорт\" удалит все данные, хранящиеся более # месяца. Изменения вступят в силу в связанных приложениях в течение одного дня.}few{Приложение \"Здоровье и спорт\" удалит все данные, хранящиеся более # месяцев. Изменения вступят в силу в связанных приложениях в течение одного дня.}many{Приложение \"Здоровье и спорт\" удалит все данные, хранящиеся более # месяцев. Изменения вступят в силу в связанных приложениях в течение одного дня.}other{Приложение \"Здоровье и спорт\" удалит все данные, хранящиеся более # месяца. Изменения вступят в силу в связанных приложениях в течение одного дня.}}"</string>
     <string name="deletion_started_category_list_section" msgid="3052940611815658991">"Будет удалена информация из следующих категорий:"</string>
     <string name="deletion_started_done_button" msgid="1232018689825054257">"ОК"</string>
-    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Автоудаление включено. Данные, хранящиеся более # месяца, будут удалены.}one{Автоудаление включено. Данные, хранящиеся более # месяца, будут удалены.}few{Автоудаление включено. Данные, хранящиеся более # месяцев, будут удалены.}many{Автоудаление включено. Данные, хранящиеся более # месяцев, будут удалены.}other{Автоудаление включено. Данные, хранящиеся более # месяца, будут удалены.}}"</string>
+    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Автоудаление включено. Данные старше # месяца будут удалены.}one{Автоудаление включено. Данные старше # месяца будут удалены.}few{Автоудаление включено. Данные старше # месяцев будут удалены.}many{Автоудаление включено. Данные старше # месяцев будут удалены.}other{Автоудаление включено. Данные старше # месяца будут удалены.}}"</string>
     <string name="auto_delete_off_toast" msgid="6530926709108821768">"Автоудаление отключено."</string>
     <string name="priority_dialog_title" msgid="7360654442596118085">"Задайте приоритет приложений"</string>
     <string name="priority_dialog_message" msgid="6971250365335018184">"Если данные \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" поступят от нескольких приложений, сервис \"Здоровье и спорт\" отдаст приоритет тому, которое выше других в списке. Чтобы изменить порядок, перетащите приложения на нужные места."</string>
