--- a/apk/res/values-bg/strings.xml
+++ b/apk/res/values-bg/strings.xml
@@ -918,7 +918,7 @@
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{Health Connect ще изтрие всички данни, които са по-стари от # месец. Може да мине един ден, преди тези промени да се покажат в свързаните ви приложения.}other{Health Connect ще изтрие всички данни, които са по-стари от # месеца. Може да мине един ден, преди тези промени да се покажат в свързаните ви приложения.}}"</string>
     <string name="deletion_started_category_list_section" msgid="3052940611815658991">"Данни, които ще бъдат изтрити от тези"</string>
     <string name="deletion_started_done_button" msgid="1232018689825054257">"Готово"</string>
-    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Автоматичното изтриване е включено. Данните, по-стари от # месец, ще бъдат изтрити}other{Автоматичното изтриване е включено. Данните, по-стари от # месеца, ще бъдат изтрити}}"</string>
+    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Авт. изтриване е включено. Данните, по-стари от # месец, ще бъдат изтрити}other{Авт. изтриване е включено. Данните, по-стари от # месеца, ще бъдат изтрити}}"</string>
     <string name="auto_delete_off_toast" msgid="6530926709108821768">"Автоматичното изтриване е изключено"</string>
     <string name="priority_dialog_title" msgid="7360654442596118085">"Задаване на приоритет за приложенията"</string>
     <string name="priority_dialog_message" msgid="6971250365335018184">"Ако повече от едно приложение добави данни от типа „<xliff:g id="DATA_TYPE">%s</xliff:g>“, Health Connect дава приоритет на това, което е най-напред в списъка. Можете да промените реда на приложенията чрез преместване с плъзгане."</string>
