--- a/apk/res/values-de/strings.xml
+++ b/apk/res/values-de/strings.xml
@@ -38,7 +38,7 @@
     <string name="browse_data_title" msgid="5232691805953326097">"Daten durchsuchen"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Daten sehen und feststellen, welche Apps darauf zugreifen können"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"Automatische Löschung, Datenquellen, Sicherung und Wiederherstellung"</string>
-    <string name="backup_title" msgid="211503191266235085">"Back-up machen"</string>
+    <string name="backup_title" msgid="211503191266235085">"Backup machen"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Datenquellen und Priorität"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Einheiten festlegen"</string>
     <string name="manage_data_preferences_category_title" msgid="1183110821140344472">"Einstellungen"</string>
@@ -389,7 +389,7 @@
     <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"Beim Export für den <xliff:g id="DATE">%1$s</xliff:g> ist ein Problem aufgetreten. Bitte leg ein neues Datum für den Export fest und versuch es noch mal."</string>
     <string name="next_export_time" msgid="3138247220014510213">"Nächster Export: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="next_export_text" msgid="6726252793571403846">"Nächster Export startet bald"</string>
-    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Back-up und Wiederherstellung"</string>
+    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Backup und Wiederherstellung"</string>
     <string name="last_export_time" msgid="9205875050823594041">"Letzter Export: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="last_export_time_now" msgid="31498024135933750">"Letzter Export: jetzt"</string>
     <string name="last_export_time_minutes_ago" msgid="5279296486877765961">"{count,plural, =1{Letzter Export: vor 1 Minute}other{Letzter Export: vor # Minuten}}"</string>
@@ -407,7 +407,7 @@
     <string name="import_other_error_banner_button" msgid="8006947649520909176">"Noch mal versuchen"</string>
     <string name="import_other_error_banner_summary" msgid="4378957063605649197">"Beim Wiederherstellen der Daten aus deinem Bericht ist ein Fehler aufgetreten."</string>
     <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"Über den Export können Daten gespeichert und dann auf ein neues Smartphone übertragen werden"</string>
-    <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"Sichern und Wiederherstellen"</string>
+    <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"Infos zu Back-up und Wiederherstellung"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"An"</string>
     <string name="automatic_export_off" msgid="3270255845008880841">"Aus"</string>
