--- a/apk/res/values-hi/strings.xml
+++ b/apk/res/values-hi/strings.xml
@@ -389,14 +389,14 @@
     <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"<xliff:g id="DATE">%1$s</xliff:g> को एक्सपोर्ट करने में समस्या हुई. एक्सपोर्ट के लिए तय किया गया नया शेड्यूल सेट अप करें और फिर से कोशिश करें."</string>
     <string name="next_export_time" msgid="3138247220014510213">"अगला एक्सपोर्ट किया जाएगा: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="next_export_text" msgid="6726252793571403846">"अगला एक्सपोर्ट जल्द ही शुरू होने वाला है"</string>
-    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"बैकअप लेने और डेटा वापस पाने की सुविधा"</string>
+    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"डेटा का बैकअप लेना और उसे वापस पाना"</string>
     <string name="last_export_time" msgid="9205875050823594041">"आखिरी बार एक्सपोर्ट किया गया: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="last_export_time_now" msgid="31498024135933750">"पिछली बार एक्सपोर्ट किया गया: अभी"</string>
     <string name="last_export_time_minutes_ago" msgid="5279296486877765961">"{count,plural, =1{आखिरी बार एक्सपोर्ट किया गया: 1 मिनट पहले}one{आखिरी बार एक्सपोर्ट किया गया: # मिनट पहले}other{आखिरी बार एक्सपोर्ट किया गया: # मिनट पहले}}"</string>
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{आखिरी बार एक्सपोर्ट किया गया: 1 घंटा पहले}one{आखिरी बार एक्सपोर्ट किया गया: # घंटा पहले}other{आखिरी बार एक्सपोर्ट किया गया: # घंटे पहले}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"आखिरी बार एक्सपोर्ट किया गया: कुछ नहीं"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"एक्सपोर्ट के लिए तय किया गया शेड्यूल"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"एक्सपोर्ट के लिए शेड्यूल की सुविधा"</string>
     <string name="import_data" msgid="404502315533233094">"डेटा को इंपोर्ट करें"</string>
     <string name="import_data_description" msgid="4040178599441724296">"एक्सपोर्ट की गई पिछली फ़ाइल का डेटा वापस पाएं"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"डेटा वापस नहीं लाया जा सका"</string>
@@ -407,7 +407,7 @@
     <string name="import_other_error_banner_button" msgid="8006947649520909176">"फिर से कोशिश करें"</string>
     <string name="import_other_error_banner_summary" msgid="4378957063605649197">"एक्सपोर्ट से डेटा वापस लाने में कोई गड़बड़ी हुई."</string>
     <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"एक्सपोर्ट करने की सुविधा से डेटा को सेव किया जा सकता है, ताकि आप उसे नए फ़ोन में ट्रांसफ़र कर सकें"</string>
-    <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"बैकअप और रिस्टोर के बारे में जानकारी"</string>
+    <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"बैकअप और रीस्टोर के बारे में जानकारी"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"चालू है"</string>
     <string name="automatic_export_off" msgid="3270255845008880841">"बंद है"</string>
@@ -416,7 +416,7 @@
     <string name="choose_frequency_category" msgid="9094154407387676553">"फ़्रीक्वेंसी बदलें"</string>
     <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"एक्सपोर्ट के लिए तय किया गया शेड्यूल बंद करने से, एक्सपोर्ट किया गया पिछला सेव डेटा नहीं मिटेगा"</string>
     <string name="choose_frequency" msgid="8119085390857180221">"डेटा एक्सपोर्ट करने के लिए शेड्यूल सेट करें"</string>
-    <string name="choose_frequency_description" msgid="7698155810053504157">"डेटा एक्सपोर्ट करने की फ़्रीक्वेंसी सेट करें"</string>
+    <string name="choose_frequency_description" msgid="7698155810053504157">"चुनें कि डेटा कब एक्सपोर्ट किया जाए"</string>
     <string name="frequency_daily" msgid="3596412357416125727">"हर दिन"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"हर हफ़्ते"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"हर महीने"</string>
@@ -462,7 +462,7 @@
     <string name="export_import_choose_account_cancel_button" msgid="7975616126298263479">"रद्द करें"</string>
     <string name="export_import_choose_account_done_button" msgid="8450305343787469429">"हो गया"</string>
     <string name="export_import_no_apps_text" msgid="6403119325024893690">"कोई ऐप्लिकेशन उपलब्ध नहीं है. क्लाउड स्टोरेज की सुविधा वाले ऐप्लिकेशन इंस्टॉल करें, ताकि वे यहां दिखें"</string>
-    <string name="export_import_install_apps_text" msgid="5026922993254770904">"ज़्यादा विकल्पों के लिए, क्लाउड स्टोरेज की सुविधा वाले ऐप्लिकेशन डाउनलोड करें. इससे ये ऐप्लिकेशन यहां दिखेंगे"</string>
+    <string name="export_import_install_apps_text" msgid="5026922993254770904">"ज़्यादा विकल्पों के लिए, क्लाउड स्टोरेज की सुविधा वाले ऐप्लिकेशन डाउनलोड करें. ये ऐप्लिकेशन यहां दिखेंगे"</string>
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Store पर जाएं"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect का इस्तेमाल शुरू करें"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect में, आपकी सेहत और फ़िटनेस से जुड़ा डेटा सेव किया जाता है. इससे अपने डिवाइस में अलग-अलग ऐप्लिकेशन को आसानी से सिंक करने में मदद मिलती है"</string>
@@ -903,7 +903,7 @@
     <string name="send_feedback_description" msgid="2887207112856240778">"यह बताएं कि आपको Health Connect के साथ, सेहत और फ़िटनेस बनाए रखने में मदद करने वाले कौनसे ऐप्लिकेशन इस्तेमाल करने हैं"</string>
     <string name="playstore_app_title" msgid="4138464328693481809">"Play Store"</string>
     <string name="auto_delete_button" msgid="8536451792268513619">"अपने-आप मिटने की सुविधा"</string>
-    <string name="auto_delete_title" msgid="8761742828224207826">"अपने-आप मिटना"</string>
+    <string name="auto_delete_title" msgid="8761742828224207826">"अपने-आप मिटने की सुविधा"</string>
     <string name="auto_delete_header" msgid="4258649705159293715">"यह कंट्रोल करें कि Health Connect में आपका डेटा कितने समय तक सेव रहे. डेटा को तय समय के बाद मिटाने का शेड्यूल सेट करके ऐसा किया जा सकता है"</string>
     <string name="auto_delete_learn_more" msgid="7416469042791307994">"अपने-आप मिटने की सुविधा के बारे में ज़्यादा जानें"</string>
     <string name="auto_delete_section" msgid="7732381000331475082">"डेटा अपने-आप मिटे"</string>
