--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -396,7 +396,7 @@
     <string name="last_export_time_hours_ago" msgid="3174986640795245343">"{count,plural, =1{Síðasti útflutningur: fyrir einni klukkustund}one{Síðasti útflutningur: fyrir # klukkustund}other{Síðasti útflutningur: fyrir # klukkustundum}}"</string>
     <string name="no_last_export_message" msgid="8138900854579872667">"Síðasti útflutningur: ekkert"</string>
     <string name="last_export_file_location" msgid="4069435932524304633">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
-    <string name="scheduled_export" msgid="8737660963687364370">"Tímasettur útflutningur"</string>
+    <string name="scheduled_export" msgid="8737660963687364370">"Áætlaður útflutningur"</string>
     <string name="import_data" msgid="404502315533233094">"Flytja inn gögn"</string>
     <string name="import_data_description" msgid="4040178599441724296">"Endurheimtu gögn úr skrá sem hefur áður verið flutt út"</string>
     <string name="import_error_banner_title" msgid="1480977889067027790">"Tókst ekki að endurheimta gögn"</string>
@@ -416,7 +416,7 @@
     <string name="choose_frequency_category" msgid="9094154407387676553">"Breyta tíðni"</string>
     <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"Áður útfluttum gögnum verður ekki eytt þaðan sem þau voru vistuð þegar þú slekkur á áætluðum útflutningi"</string>
     <string name="choose_frequency" msgid="8119085390857180221">"Settu upp áætlaðan útflutning"</string>
-    <string name="choose_frequency_description" msgid="7698155810053504157">"Veldu hversu reglulega gögnin þín verða flutt út"</string>
+    <string name="choose_frequency_description" msgid="7698155810053504157">"Veldu hversu oft gögnin þín verða flutt út"</string>
     <string name="frequency_daily" msgid="3596412357416125727">"Daglega"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"Vikulega"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"Mánaðarlega"</string>
