--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -276,9 +276,9 @@
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"예방 접종"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"예방 접종"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"예방 접종 데이터를 읽습니다."</string>
-    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"실험실 결과"</string>
-    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"실험실 결과"</string>
-    <string name="laboratory_results_content_description" msgid="5882338877203692484">"실험실 결과 데이터 읽기"</string>
+    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"검사 결과"</string>
+    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"검사 결과"</string>
+    <string name="laboratory_results_content_description" msgid="5882338877203692484">"검사 결과 데이터 읽기"</string>
     <string name="medications_uppercase_label" msgid="4783281053427990225">"복용약"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"복용약"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"복용약 정보 읽기"</string>
@@ -288,15 +288,15 @@
     <string name="problems_uppercase_label" msgid="4047882613795113715">"문제"</string>
     <string name="problems_lowercase_label" msgid="6934298611508910866">"문제"</string>
     <string name="problems_content_description" msgid="1549418294742668962">"문제 데이터 읽기"</string>
-    <string name="procedures_uppercase_label" msgid="9176087520132593261">"절차"</string>
-    <string name="procedures_lowercase_label" msgid="5320804313946273234">"절차"</string>
-    <string name="procedures_content_description" msgid="1086900373141440005">"절차 데이터 읽기"</string>
-    <string name="social_history_uppercase_label" msgid="1731364502071035544">"소셜 기록"</string>
-    <string name="social_history_lowercase_label" msgid="9027541979445736412">"소셜 기록"</string>
-    <string name="social_history_content_description" msgid="7187059309389849831">"소셜 기록 데이터 읽기"</string>
-    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"생체 신호"</string>
-    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"생체 신호"</string>
-    <string name="vital_signs_content_description" msgid="914944352640528612">"생체 신호 데이터 읽기"</string>
+    <string name="procedures_uppercase_label" msgid="9176087520132593261">"시술"</string>
+    <string name="procedures_lowercase_label" msgid="5320804313946273234">"시술"</string>
+    <string name="procedures_content_description" msgid="1086900373141440005">"시술 데이터 읽기"</string>
+    <string name="social_history_uppercase_label" msgid="1731364502071035544">"사회력"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"사회력"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"사회력 데이터 읽기"</string>
+    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"활력 징후"</string>
+    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"활력 징후"</string>
+    <string name="vital_signs_content_description" msgid="914944352640528612">"활력 징후 데이터 읽기"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"마음챙김"</string>
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"마음챙김"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"마음챙김 읽기"</string>
@@ -324,8 +324,8 @@
     <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"모든 건강 기록 권한을 삭제하시겠어요?"</string>
     <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"피트니스 및 웰니스 권한을 모두 삭제하시겠어요?"</string>
     <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱에서 더 이상 헬스 커넥트의 데이터를 읽거나 쓸 수 없습니다.\n\n이는 카메라, 마이크 또는 위치와 같이 이 앱에 부여된 다른 권한에는 영향을 미치지 않습니다."</string>
-    <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 더 이상 헬스 커넥트의 데이터(백그라운드 데이터 포함)를 읽거나 쓸 수 없습니다.\n\n이는 카메라, 마이크 또는 위치와 같이 이 앱에 부여된 다른 권한에는 영향을 미치지 않습니다."</string>
-    <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 더 이상 헬스 커넥트의 데이터(이전 데이터 포함)를 읽거나 쓸 수 없습니다.\n\n이는 카메라, 마이크 또는 위치와 같이 이 앱에 부여된 다른 권한에는 영향을 미치지 않습니다."</string>
+    <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱에서 더 이상 헬스 커넥트의 데이터(백그라운드 데이터 포함)를 읽거나 쓸 수 없습니다.\n\n이는 카메라, 마이크 또는 위치와 같이 이 앱에 부여된 다른 권한에는 영향을 미치지 않습니다."</string>
+    <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱에서 더 이상 헬스 커넥트의 데이터(이전 데이터 포함)를 읽거나 쓸 수 없습니다.\n\n이는 카메라, 마이크 또는 위치와 같이 이 앱에 부여된 다른 권한에는 영향을 미치지 않습니다."</string>
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱에서 더 이상 헬스 커넥트의 데이터(백그라운드 및 이전 데이터 포함)를 읽거나 쓸 수 없습니다.\n\n이는 카메라, 마이크 또는 위치와 같이 이 앱에 부여된 다른 권한에는 영향을 미치지 않습니다."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"헬스 커넥트에서 <xliff:g id="APP_NAME">%1$s</xliff:g> 앱의 피트니스 데이터 및 건강 기록도 삭제"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"이 앱의 권한이 삭제되었습니다."</string>
@@ -406,7 +406,7 @@
     <string name="import_version_mismatch_error_banner_summary" msgid="6165550114170534795">"헬스 커넥트가 데이터를 복원할 수 있도록 시스템을 업데이트한 다음 다시 시도하세요."</string>
     <string name="import_other_error_banner_button" msgid="8006947649520909176">"다시 시도"</string>
     <string name="import_other_error_banner_summary" msgid="4378957063605649197">"내보내기에서 데이터를 복원하는 동안 문제가 발생했습니다."</string>
-    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"내보내기를 사용하면 데이터를 저장하여 새 휴대전화로 데이터를 전송할 수 있습니다."</string>
+    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"내보내기 기능을 사용하면 데이터를 저장하여 새 휴대전화로 전송할 수 있습니다."</string>
     <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"백업 및 복원 정보"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"사용"</string>
@@ -918,7 +918,7 @@
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{헬스 커넥트에서 #개월이 넘은 데이터를 모두 삭제합니다. 연결된 앱에 변경사항이 표시되려면 하루 정도 걸릴 수 있습니다.}other{헬스 커넥트에서 #개월이 넘은 데이터를 모두 삭제합니다. 연결된 앱에 변경사항이 표시되려면 하루 정도 걸릴 수 있습니다.}}"</string>
     <string name="deletion_started_category_list_section" msgid="3052940611815658991">"다음 카테고리의 데이터가 삭제됩니다"</string>
     <string name="deletion_started_done_button" msgid="1232018689825054257">"완료"</string>
-    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{자동 삭제 사용 중. #개월이 지난 데이터는 삭제됩니다}other{자동 삭제 사용 중. #개월이 지난 데이터는 삭제됩니다}}"</string>
+    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{자동 삭제 사용 중. #개월이 지난 데이터는 삭제됩니다.}other{자동 삭제 사용 중. #개월이 지난 데이터는 삭제됩니다}}"</string>
     <string name="auto_delete_off_toast" msgid="6530926709108821768">"자동 삭제 사용 중지됨"</string>
     <string name="priority_dialog_title" msgid="7360654442596118085">"앱 우선순위 설정"</string>
     <string name="priority_dialog_message" msgid="6971250365335018184">"두 개 이상의 앱이 <xliff:g id="DATA_TYPE">%s</xliff:g> 데이터를 추가할 경우 헬스 커넥트에서 목록의 가장 위에 있는 앱에 우선순위를 부여합니다. 순서를 변경하려면 앱을 드래그하세요."</string>
