--- a/apk/res/values-ml/strings.xml
+++ b/apk/res/values-ml/strings.xml
@@ -918,7 +918,7 @@
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{# മാസത്തിൽ കൂടുതൽ പഴക്കമുള്ള ഡാറ്റ Health Connect ഇല്ലാതാക്കും. ഈ മാറ്റങ്ങൾ നിങ്ങളുടെ കണക്റ്റ് ചെയ്ത ആപ്പുകളിൽ ദൃശ്യമാകാൻ ഒരു ദിവസം എടുത്തേക്കാം.}other{# മാസത്തിൽ കൂടുതൽ പഴക്കമുള്ള ഡാറ്റ Health Connect ഇല്ലാതാക്കും. ഈ മാറ്റങ്ങൾ നിങ്ങളുടെ കണക്റ്റ് ചെയ്ത ആപ്പുകളിൽ ദൃശ്യമാകാൻ ഒരു ദിവസം എടുത്തേക്കാം.}}"</string>
     <string name="deletion_started_category_list_section" msgid="3052940611815658991">"ഇവയിൽ നിന്ന് ഡാറ്റ ഇല്ലാതാക്കും"</string>
     <string name="deletion_started_done_button" msgid="1232018689825054257">"പൂർത്തിയായി"</string>
-    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{സ്വയമേവ-ഇല്ലാതാക്കൽ ഓണാണ്. # മാസത്തിലധികം പഴക്കമുള്ള ഡാറ്റ ഇല്ലാതാക്കും}other{സ്വയമേവ-ഇല്ലാതാക്കൽ ഓണാണ്. # മാസത്തിലധികം പഴക്കമുള്ള ഡാറ്റ ഇല്ലാതാക്കും}}"</string>
+    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{സ്വയമേവ-ഇല്ലാതാക്കൽ ഓണാണ്. # മാസത്തിലേറെയുള്ള ഡാറ്റ ഇല്ലാതാക്കും}other{സ്വയമേവ-ഇല്ലാതാക്കൽ ഓണാണ്. # മാസത്തിലേറെയുള്ള ഡാറ്റ ഇല്ലാതാക്കും}}"</string>
     <string name="auto_delete_off_toast" msgid="6530926709108821768">"സ്വയമേവ-ഇല്ലാതാക്കൽ ഓഫാണ്"</string>
     <string name="priority_dialog_title" msgid="7360654442596118085">"ആപ്പ് മുൻഗണന സജ്ജീകരിക്കുക"</string>
     <string name="priority_dialog_message" msgid="6971250365335018184">"ഒന്നിലധികം ആപ്പ് <xliff:g id="DATA_TYPE">%s</xliff:g> ഡാറ്റ ചേർക്കുകയാണെങ്കിൽ, ഈ ലിസ്റ്റിലെ ഏറ്റവും മുകളിലുള്ള ആപ്പിന് Health Connect മുൻഗണന നൽകുന്നു. ആപ്പുകൾ പുനഃക്രമീകരിക്കാൻ അവ വലിച്ചിടുക."</string>
