--- a/apk/res/values-pl/strings.xml
+++ b/apk/res/values-pl/strings.xml
@@ -291,9 +291,9 @@
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"Procedury"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"procedury"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"Odczytaj procedury"</string>
-    <string name="social_history_uppercase_label" msgid="1731364502071035544">"Historia społeczna"</string>
-    <string name="social_history_lowercase_label" msgid="9027541979445736412">"historia społeczna"</string>
-    <string name="social_history_content_description" msgid="7187059309389849831">"Odczytaj historię społeczną"</string>
+    <string name="social_history_uppercase_label" msgid="1731364502071035544">"Historia danych związanych ze stylem życia"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"historia danych związanych ze stylem życia"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"Odczytaj historię danych związanych ze stylem życia"</string>
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"Parametry życiowe"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"parametry życiowe"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"Odczytaj parametry życiowe"</string>
@@ -328,7 +328,7 @@
     <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie już mogła odczytywać danych z Health Connect (w tym wcześniejszych danych) ani ich zapisywać.\n\nNie wpływa to na inne uprawnienia, które może mieć ta aplikacja, np. dotyczące aparatu, mikrofonu czy lokalizacji."</string>
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie już mogła odczytywać danych z Health Connect (w tym danych w tle i wcześniejszych danych) ani ich zapisywać.\n\nNie wpływa to na inne uprawnienia, które może mieć ta aplikacja, np. dotyczące aparatu, mikrofonu czy lokalizacji."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Usuń z Health Connect dane o aktywności fizycznej i dane o stanie zdrowia z aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
-    <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Usunięto uprawnienia tej aplikacji"</string>
+    <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Uprawnienia tej aplikacji zostały usunięte"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Następny dzień"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Wybrany dzień"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Poprzedni dzień"</string>
@@ -918,7 +918,7 @@
     <string name="deletion_started_x_months" msgid="6567199107249615612">"{count,plural, =1{Health Connect usunie wszystkie dane starsze niż # miesiąc. Zmiany powinny być widoczne w połączonych aplikacjach w ciągu jednego dnia.}few{Health Connect usunie wszystkie dane starsze niż # miesiące. Zmiany powinny być widoczne w połączonych aplikacjach w ciągu jednego dnia.}many{Health Connect usunie wszystkie dane starsze niż # miesięcy. Zmiany powinny być widoczne w połączonych aplikacjach w ciągu jednego dnia.}other{Health Connect usunie wszystkie dane starsze niż # miesiąca. Zmiany powinny być widoczne w połączonych aplikacjach w ciągu jednego dnia.}}"</string>
     <string name="deletion_started_category_list_section" msgid="3052940611815658991">"Zostaną usunięte dane z tych kategorii:"</string>
     <string name="deletion_started_done_button" msgid="1232018689825054257">"Gotowe"</string>
-    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Automatyczne usuwanie jest włączone. Dane starsze niż # miesiąc zostaną usunięte}few{Automatyczne usuwanie jest włączone. Dane starsze niż # miesiące zostaną usunięte}many{Automatyczne usuwanie jest włączone. Dane starsze niż # miesięcy zostaną usunięte}other{Automatyczne usuwanie jest włączone. Dane starsze niż # miesiąca zostaną usunięte}}"</string>
+    <string name="auto_delete_confirmation_toast" msgid="7161651426400701306">"{count,plural, =1{Automatyczne usuwanie jest włączone. Dane starsze niż # mies. zostaną usunięte}few{Automatyczne usuwanie jest włączone. Dane starsze niż # mies. zostaną usunięte}many{Automatyczne usuwanie jest włączone. Dane starsze niż # mies. zostaną usunięte}other{Automatyczne usuwanie jest włączone. Dane starsze niż # mies. zostaną usunięte}}"</string>
     <string name="auto_delete_off_toast" msgid="6530926709108821768">"Automatyczne usuwanie jest wyłączone"</string>
     <string name="priority_dialog_title" msgid="7360654442596118085">"Ustaw priorytet aplikacji"</string>
     <string name="priority_dialog_message" msgid="6971250365335018184">"Jeśli więcej niż 1 aplikacja dodaje określone dane (<xliff:g id="DATA_TYPE">%s</xliff:g>), Health Connect nadaje priorytet aplikacji, która znajduje się najwyżej na tej liście. Przeciągnij aplikacje, aby zmienić ich kolejność."</string>
