--- a/apk/res/values-zh-rCN/strings.xml
+++ b/apk/res/values-zh-rCN/strings.xml
@@ -386,7 +386,7 @@
     <string name="denied_apps_dialog_got_it_button" msgid="4698003516923683959">"知道了"</string>
     <string name="export_file_access_error_banner_button" msgid="6336949702329425932">"设置"</string>
     <string name="export_file_access_error_banner_title" msgid="8290988049467813322">"无法导出数据"</string>
-    <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"<xliff:g id="DATE">%1$s</xliff:g>的导出任务出现问题。请设置新的排定导出任务并重试。"</string>
+    <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"<xliff:g id="DATE">%1$s</xliff:g>的导出任务出现问题。请设置新的定期导出任务并重试。"</string>
     <string name="next_export_time" msgid="3138247220014510213">"下次导出日期：<xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="next_export_text" msgid="6726252793571403846">"下一次导出即将开始"</string>
     <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"备份和恢复"</string>
@@ -410,17 +410,17 @@
     <string name="backup_and_restore_footer_link_text" msgid="9075133737244288876">"关于备份和恢复"</string>
     <string name="automatic_export_status" msgid="4407131306281440230">"<xliff:g id="EXPORT_ON_OR_OFF">%1$s</xliff:g> • <xliff:g id="EXPORT_FREQUENCY">%2$s</xliff:g>"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"已开启"</string>
-    <string name="automatic_export_off" msgid="3270255845008880841">"已停用"</string>
-    <string name="automatic_export_switch_text" msgid="8277559519722722926">"按计划导出"</string>
+    <string name="automatic_export_off" msgid="3270255845008880841">"已关闭"</string>
+    <string name="automatic_export_switch_text" msgid="8277559519722722926">"定期导出"</string>
     <string name="next_export_file_location" msgid="2117071837862240540">"<xliff:g id="EXPORT_APP_NAME">%1$s</xliff:g> • <xliff:g id="EXPORT_FILE_NAME">%2$s</xliff:g>"</string>
     <string name="choose_frequency_category" msgid="9094154407387676553">"更改频率"</string>
-    <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"如果您关闭导出计划，不会导致之前导出的数据从保存位置删除"</string>
-    <string name="choose_frequency" msgid="8119085390857180221">"设置导出计划"</string>
+    <string name="scheduled_export_settings_footer_text" msgid="8488483803782086291">"如果您关闭定期导出，请注意，系统不会从保存位置删除之前导出的数据"</string>
+    <string name="choose_frequency" msgid="8119085390857180221">"设置定期导出"</string>
     <string name="choose_frequency_description" msgid="7698155810053504157">"选择数据导出频率"</string>
     <string name="frequency_daily" msgid="3596412357416125727">"每天"</string>
     <string name="frequency_weekly" msgid="7302587625019573393">"每周"</string>
     <string name="frequency_monthly" msgid="729674398053825938">"每月"</string>
-    <string name="export_destination_title" msgid="8352929396306002479">"选择导出计划的导出数据保存位置"</string>
+    <string name="export_destination_title" msgid="8352929396306002479">"选择定期导出内容的保存位置"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"请选择一款云端存储空间应用来导出您的数据"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"健康数据共享"</string>
     <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"健康数据共享 (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
@@ -443,11 +443,11 @@
     <string name="import_notification_open_intent_button" msgid="2739924648846724969">"打开"</string>
     <string name="import_notification_choose_file_intent_button" msgid="2249671128440758769">"选择文件"</string>
     <string name="import_notification_free_up_space_intent_button" msgid="4665571334602539807">"释放空间"</string>
-    <string name="scheduled_export_on_toast_text" msgid="945186472588537310">"已开启按计划导出"</string>
+    <string name="scheduled_export_on_toast_text" msgid="945186472588537310">"已开启定期导出"</string>
     <string name="export_notification_error_generic_error_title" msgid="7940091379629095465">"健康数据共享无法导出数据"</string>
     <string name="export_notification_error_more_space_needed_title" msgid="5089783781556500431">"需要更多存储空间"</string>
-    <string name="export_notification_error_generic_error_body_text" msgid="4161925150551602640">"<xliff:g id="DATE">%1$s</xliff:g>的导出任务出现问题。请设置新的排定导出任务并重试。"</string>
-    <string name="export_notification_error_more_space_needed_body_text" msgid="5519192430780383427">"健康数据共享要求手机上有 <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> 的存储空间，才能继续执行排定的导出任务。"</string>
+    <string name="export_notification_error_generic_error_body_text" msgid="4161925150551602640">"<xliff:g id="DATE">%1$s</xliff:g>的导出任务出现问题。请设置新的定期导出任务并重试。"</string>
+    <string name="export_notification_error_more_space_needed_body_text" msgid="5519192430780383427">"健康数据共享要求手机上有 <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> 的存储空间，才能继续进行定期导出。"</string>
     <string name="export_notification_set_up_intent_button" msgid="1484836974815713693">"设置"</string>
     <string name="export_notification_free_up_space_intent_button" msgid="2902823222861202203">"释放空间"</string>
     <string name="export_back_button" msgid="3550795479165524982">"返回"</string>
@@ -463,7 +463,7 @@
     <string name="export_import_choose_account_done_button" msgid="8450305343787469429">"完成"</string>
     <string name="export_import_no_apps_text" msgid="6403119325024893690">"没有可用的应用。安装云端存储空间应用即可在此处查看您的数据"</string>
     <string name="export_import_install_apps_text" msgid="5026922993254770904">"如需更多选项，请安装云端存储空间应用，然后这里就会显示相关选项"</string>
-    <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"转到 Play 商店"</string>
+    <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"前往 Play 商店"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"开始使用健康数据共享"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"“健康数据共享”会存储您的健康与健身数据，让您可以轻松同步设备上各应用的数据"</string>
     <string name="share_data" msgid="3481932156368883946">"与应用分享数据"</string>
